--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,9 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            stateless: true
+            json_login :
+                check_path: /api/login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -25,6 +28,7 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
