--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,7 +35,9 @@ security:
     access_control:
         - { path: ^/api/registration, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/doc, roles: PUBLIC_ACCESS}
         - { path: ^/api, roles: ROLE_USER }
+        
 
 when@test:
     security:
