--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,10 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "*"
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
+        "symfony/maker-bundle": "*",
+        "symfony/phpunit-bridge": "^7.2"
     }
 }
